--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "grunt-contrib-concat": "*",
     "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-uglify": "^4.0.1",
-    "grunt-phplint": "*"
+    "grunt-phplint": "*",
+    "lodash": "~>4.17.13"
   },
   "repository": {
     "type": "git",
